--- a/package.json
+++ b/package.json
@@ -13,7 +13,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "webpack": "^4.32.2"
+    "accepts": "^1.3.5",
+    "cache-content-type": "^1.0.0",
+    "content-disposition": "~0.5.2",
+    "content-type": "^1.0.4",
+    "cookies": "^0.7.3",
+    "debug": "^4.1.1",
+    "delegates": "^1.0.0",
+    "destroy": "^1.0.4",
+    "error-inject": "^1.0.0",
+    "escape-html": "^1.0.3",
+    "fresh": "^0.5.2",
+    "http-assert": "^1.4.1",
+    "http-errors": "^1.7.2",
+    "on-finished": "^2.3.0",
+    "statuses": "^1.5.0",
+    "type-is": "^1.6.16",
+    "vary": "^1.1.2",
+    "webpack": "^4.32.2",
+    "parseurl": "^1.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
