--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,13 @@
 {
   "presets": [
-    "es2017"
+    "@babel/preset-env"
   ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties", { "loose" : true }]
+    ["@babel/plugin-proposal-class-properties", { "loose" : true }],
+    ["transform-es2015-template-literals", {
+      "loose": true,
+      "spec": true
+    }]
   ]
 }
