--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "skom",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/application.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --config webpack.config.js"
+    "babel": "node_modules\\.bin\\babel src --out-dir lib"
   },
   "author": "",
   "license": "ISC",
@@ -27,11 +27,10 @@
     "http-assert": "^1.4.1",
     "http-errors": "^1.7.2",
     "on-finished": "^2.3.0",
+    "parseurl": "^1.3.2",
     "statuses": "^1.5.0",
     "type-is": "^1.6.16",
-    "vary": "^1.1.2",
-    "webpack": "^4.32.2",
-    "parseurl": "^1.3.2"
+    "vary": "^1.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -42,6 +41,6 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.4.4",
     "babel-loader": "^8.0.6",
-    "webpack-cli": "^3.3.2"
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0"
   }
 }
